2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ft.c, gui/xaw_menu.c, hypertex.c: Avoid undefined behaviour
	when char is signed.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* squeeze/Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2014-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* m4/xdvi-xinput-2-1.m4: Change the default to disable 'smooth
	scrolling' for native TL build.

2014-04-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Imported xdvik-22.87.tar.gz
	from http://sourceforge.net/projects/xdvi/files/xdvik/.

2013-09-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop ACLOCAL_AMFLAGS.
	* configure.ac: Use AC_CONFIG_MACRO_DIRS.

2013-07-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* *.[ch], gui/*.[ch], tests/*.[ch]: Include "xdvi-config.h"
	first in all compilable source files but not in headers, as
	claimed in a comment at the top of xdvi-config.h.

2013-07-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* font-open.c, psdps.c, xdvi.h: Replace bcopy(f, t, l) =>
	memcpy(t, f, l).
	* psgs.c: Replace rindex() => strrchr().

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xlwradioP.h: May need to #include <X11/Xaw/XawInit.h>.

2013-06-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Drop variables that are set but not used:
	* dvi-draw.c: 'actual_w'.
	* events.c: 'arg_bak' and 'clear_statusline'.
	* gui/print-dialog.c: 'dest_label' and 'range_label'.
	* gui/search-dialog.c: 'timeout'.
	* hypertex.c: 'x_delta'.
	* special.c: 'found' (two times).
	* xdvi.c: 'exclusive'.

2013-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* m4/xdvi-check-iconv.m4: Somewhat improved logic.

2013-04-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Imported xdvik-22.86.tar.gz
	from http://sourceforge.net/projects/xdvi/files/xdvik/.

	* Makefile.am: Renamed ChangeLog.TL => ChangeLog.
	(install-data-hook): Make sure $(DESTDIR)$(dvipsconfdir) exists.

	* util.c (find_str_int_hash): Return type of hash_lookup() is
	'const_string *'.
